# imp

./: .gitignore  Cargo.toml  README.md
backend/: Cargo.toml
backend/docs/: grammar.md
backend/src/: a.rs  b.rs  c.rs  d.rs  diet.rs  e.rs  error.rs  evaluator.rs  interp.rs  lexer.rs  lib.rs  op.rs  parser-new.rs  parser.rs  pass.rs  saved.rs  span.rs  stream.rs
backend/src.old/: error.rs  interp.rs  lexer.rs  lib.rs  parser.rs
backend/src.old/interp/: operation.rs
backend/src.old/parser/: error.rs
backend/src/a/: tkz.rs
backend/src/c/: err.rs  tokens.rs
backend/src/d/: operand.rs  operation.rs
backend/src/d/operation/: arith.rs  macros.rs  trig.rs
backend/src/e/: opn.rs
backend/src/e/opn/: arith.rs
backend/src/evaluator/: operand.rs  operation.rs
backend/src/evaluator/operation/: macros.rs
backend/src/interp/: operand.rs  operation.rs
backend/src/interp/operation/: macros.rs
backend/src/lexer/: tokenizer.rs
backend/src/parser/: err.rs  input.rs  tokens.rs
backend/tests/: basic-arithmetic.json
docs/: architecture.md  backend-model.dot  gen.sh  generate-graphs.sh  generate-man-page.sh  imp.1.md
frontend/: Cargo.toml
frontend/res/: default-config.toml
frontend/src/: args.rs  cmd.rs  config.rs  err.rs  imp.rs  main.rs  shell.rs
frontend/src/shell/: cmd.rs  imp.rs
