# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

[package]
name = "imp-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.7"
rayon = "1.5"
rust_decimal = { version = "1.23", features = ["maths"] }
static_init = "1.0"
termtree = "0.2"
